--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,20 @@
     <title>Budget Helper</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" sizes="76x76" type="image/x-icon" href="favicon.ico" />
     <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200"
       rel="stylesheet"
-      href="https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+      rel="stylesheet"
     />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root
+      ><div class="loader-container">
+        <div class="loader"></div></div
+    ></app-root>
   </body>
 </html>
