--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,22 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-g0Or9b7+qDT1l7YpzUqL8vPTLz8JxgGmLW9HHirrEEp9XK0SwiR76QCtUG2r+ZLyr4tcG1lgqetdJ5icPtl7NA=="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="mat-typography">
     <app-root
       ><div class="loader-container">
         <div class="loader"></div></div
